--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "vitest --watch"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
     "prop-types": "^15.8.1",
